# SourceGraphAI-Test

./: .env.example  .gitignore  README.md  keywords.md  pyproject.toml  requirements.txt
basis/: code_generator_graph_openai.py  extracted_data.ds.py  extracted_data.openai.py  extracted_data.py  script_create_multi.py  search_graph_ds_search.py  search_graph_or.py
browser-use-test/: adjust_cookie.py  run_project.sh  search_keywords.py  setup_project.py  test.py
scrape-to-markdown/: main.py  readme.md
scrape-to-markdown/browser_use_app/: search_get_urls.py
scrape-to-markdown/config/: keywords.json  settings.py
scrape-to-markdown/processors/: html_downloader.py  html_to_markdown.py
scrape-to-markdown/scrapers/: google_scraper.py  search_engine.py
scrape-to-markdown/storage/: file_manager.py
scrape-to-markdown/tests/: test_google_scraper.py
scrape-to-markdown/utils/: merge_md.py  url_validator.py  utils.py
